Fix a spacing issue with the footer
- it was trying to run away like pls bb come back
- the best way to fix an issue is to start deleting code until it fixes itself,
true story

--- a/go/static/css/styles.css
+++ b/go/static/css/styles.css
@@ -21,7 +21,6 @@ body {
 .valign-center span {
   display: inline-block;
   vertical-align: middle;
-  line-height: normal;
 }
 .asteriskField {
     display: none;
